# ca

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac  create_new_server_cert.sh.in
root/: openssl.cnf.in
